--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
             <div class="container">
                 <h2>Contact</h2>
                 <div class="contact-details">
-                    <p>Email: <a href="mailto:your.email@example.com">abdulrahmanak1819@gmail.com</a></p>
+                    <p>Email: <a href="mailto:abdulrahmanak1819@gmail.com">abdulrahmanak1819@gmail.com</a></p>
                     <p>Phone: +91 70921 81203</p>
-                    <p>LinkedIn: <a href="#">https://www.linkedin.com/in/ak-abdul-rahman-a18baa259</a></p>
+                    <p>LinkedIn: <a href="https://www.linkedin.com/in/ak-abdul-rahman-a18baa259">https://www.linkedin.com/in/ak-abdul-rahman-a18baa259</a></p>
                 </div>
             </div>
         </section>
